initial poc working. calling strava api getting all activities for one club

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,14 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta charset="UTF-8"/>
     <title>vera</title>
-    <link rel="shortcut icon" href="/favicon.png" />
     <link rel="stylesheet" href="./css/bundle.css" />
 
 </head>
 
 <body>
     <div id="content" />
-    <script src="./js/vera.js"></script>
+    <script src="./js/stravafun.js"></script>
 </body>
 
 </html>
